k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finch-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finch-frontend
  template:
    metadata:
      labels:
        app: finch-frontend
    spec:
      containers:
        - name: finch-frontend
          image: tutulchakma/finch-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: finch-frontend
spec:
  type: NodePort
  selector:
    app: finch-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080  # you can access frontend at minikube_ip:30080
